2005-03-09  Inge Wallin  <inge@lysator.liu.se>

	Experiment with visual appearance of the new data editor
	* kchartDataEditor.cc (setData): Set column widths to 80.
	
	Fix bug introduced by patch to fix bug 14971: Axes label handling
	in connection with KSpread was broken.
	* kchart_part.cc (setData): set m_rowLabels and m_colLabels
	instead of storing axes labels to the params.

2005-03-08  Inge Wallin  <inge@lysator.liu.se>

	Initialize the chart in the document instead of the view.
	* kchart_part.{h,cc} (initTestChart): Renamed from initRandomData
	and enhanced to generate row and column headers as well.
	* kchart_view.{h,cc}: (createTempData): removed
	
	Store labels for rows and columns separately in the document.
	This fixes bug 14971.
	* kchart_part.h (m_rowLabels, m_colLabels): new members
	(rowLabelTexts, colLabelTexts): new methods
	* kchart_part.cc (paintContent): Paint using the new labels, both
	for ordinary and transposed tables.
	* kchartDataEditor.{h,cc} (setRowLabels): new method
	 (getRowLabels): new method
	 (setColLabels): new method
	 (getColLabels): new method
	* kchart_view.cc (edit): call new methods above in data editor,
	and don't call old methods setLegend, getLegend, setXLabel, etc.

2005-03-07  Inge Wallin  <inge@lysator.liu.se>

	Start on bug 14971: kchart data import should flip X & Y data.
	* kchart_part.{h,cc} (KChartAuxiliary): New struct.
	(auxdata): new method in KChartPart.
	(loadAuxiliary): new method in KChartPart.
	(m_auxiliary): new member in KChartPart.

	(paintContent): Paint data in rows or columns (labels not yet done).
	(saveXML): Save auxiliary data (data direction) as well.
	(loadXML): Call loadAuxiliary().
	* kchartConfigDialog.{h,cc} (constructor): Take auxiliary data as 
	parameter and send it to the DataConfigPage.
	* kchartDataConfigPage.{h,cc} (constructor): Take aux data.
	(apply): Set data direction in aux data
	(init): Read data direction from aux data
