@@ -1,5 +1,13 @@
+2005-03-09  Inge Wallin  <ingwa@dhcp-254-182.lkpg.cendio.se>
+
+	* 
+
 2005-03-09  Inge Wallin  <inge@lysator.liu.se>
 
+	More experiments with visual appearance of the data editor
+	* kchartDataEditor.cc (setData): Set size of the table widget to
+	(600,300)
+	
 	Experiment with visual appearance of the new data editor
 	* kchartDataEditor.cc (setData): Set column widths to 80.
 	
